--- a/public/pages/registrarse.html
+++ b/public/pages/registrarse.html
@@ -60,6 +60,11 @@
             <input type="text" id="apellido" name="apellido" required placeholder="Escribe tu apellido...">
             <span class="error-message" id="errorApellido"></span>
             <br>
+            <label for="nombre"> * Cédula:</label>
+            <br>
+            <input type="text" id="cedula" name="cedula" required placeholder="Escribe tu cédula...">
+            <span class="error-message" id="errorNombre"></span>
+            <br>
             <label for="nombre">Nombre de Usuario:</label>
             <br>
             <input type="text" id="usuario" name="usuario" required placeholder="Escribe tu usuario...">
